--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "history": "2.1.0",
     "material-ui": "^0.15.1",
+    "ramda": "^0.21.0",
     "react": "15.0.1",
     "react-dom": "15.0.1",
     "react-redux": "4.4.5",
@@ -41,6 +42,8 @@
     "react-tap-event-plugin": "^1.0.0",
     "redux": "3.5.2",
     "redux-actions": "^0.10.0",
+    "redux-form": "^5.3.1",
+    "redux-form-material-ui": "^3.0.0",
     "redux-promise": "^0.5.3"
   }
 }
