--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "history": "2.1.0",
     "material-ui": "^0.15.1",
+    "radium": "^0.17.1",
     "ramda": "^0.21.0",
     "react": "15.0.1",
     "react-dom": "15.0.1",
