--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack-dev-server": "1.14.1"
   },
   "dependencies": {
+    "glob": "^7.0.5",
     "history": "2.1.0",
     "material-ui": "^0.15.1",
     "radium": "^0.17.1",
