--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-1": "6.5.0",
     "file-loader": "0.8.5",
     "react-hot-loader": "1.3.0",
@@ -45,7 +46,6 @@
     "redux": "3.5.2",
     "redux-actions": "^0.10.0",
     "redux-form": "^5.3.1",
-    "redux-form-material-ui": "^3.0.0",
     "redux-promise": "^0.5.3"
   }
 }
