--- a/package.json
+++ b/package.json
@@ -12,9 +12,21 @@
   "author": "Lucas Schejtman <lucas.schejtman@gmail.com>",
   "license": "ISC",
   "scripts": {
+    "test": "ava",
     "dev": "webpack-dev-server --config ./webpack/webpack.config.dev.js --hot --inline --progress"
   },
+  "ava": {
+    "files": [
+      "test/**/*.js"
+    ],
+    "source": [
+      "src/**/*.js"
+    ],
+    "concurrency": "5",
+    "require": ["babel-register"]
+  },
   "devDependencies": {
+    "ava": "^0.16.0",
     "babel-core": "6.7.7",
     "babel-eslint": "6.0.3",
     "babel-loader": "6.2.4",
