--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
   },
   "ava": {
     "files": [
-      "test/**/*.js"
+      "test/**/*.js",
+      "src/**/**/test/**/*.js"
     ],
     "source": [
       "src/**/*.js"
     ],
     "concurrency": "5",
-    "require": ["babel-register"]
+    "require": [
+      "babel-register"
+    ]
   },
   "devDependencies": {
     "ava": "^0.16.0",
@@ -35,12 +38,14 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-1": "6.5.0",
     "file-loader": "0.8.5",
+    "proxyquire": "^1.7.10",
     "react-hot-loader": "1.3.0",
     "redux-devtools": "3.3.1",
     "redux-devtools-dock-monitor": "1.1.1",
     "redux-devtools-log-monitor": "1.0.11",
     "redux-immutable-state-invariant": "1.2.3",
     "redux-slider-monitor": "1.0.5",
+    "sinon": "^1.17.5",
     "webpack": "1.13.0",
     "webpack-dev-server": "1.14.1"
   },
