--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     ],
     "concurrency": "5",
     "require": [
+      "./test/helpers/setup-browser-env",
       "babel-register"
-    ]
+    ],
+    "babel": "inherit"
   },
   "devDependencies": {
     "ava": "^0.16.0",
@@ -37,8 +39,11 @@
     "babel-preset-react": "6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-1": "6.5.0",
+    "enzyme": "^2.4.1",
     "file-loader": "0.8.5",
+    "jsdom": "^9.4.1",
     "proxyquire": "^1.7.10",
+    "react-addons-test-utils": "^15.3.0",
     "react-hot-loader": "1.3.0",
     "redux-devtools": "3.3.1",
     "redux-devtools-dock-monitor": "1.1.1",
