--- a/package.json
+++ b/package.json
@@ -56,12 +56,15 @@
     "webpack-dev-server": "1.14.1"
   },
   "dependencies": {
+    "apollo-client": "^0.4.20",
     "glob": "^7.0.5",
+    "graphql-tag": "^0.1.14",
     "history": "2.1.0",
     "material-ui": "^0.15.1",
     "radium": "^0.17.1",
     "ramda": "^0.21.0",
     "react": "15.0.1",
+    "react-apollo": "^0.5.8",
     "react-dom": "15.0.1",
     "react-redux": "4.4.5",
     "react-router": "2.3.0",
