--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "dependencies": {
     "apollo-client": "^0.4.20",
+    "babel-plugin-transform-react-jsx": "^6.8.0",
     "glob": "^7.0.5",
     "graphql-tag": "^0.1.14",
     "history": "2.1.0",
@@ -75,6 +76,7 @@
     "redux-actions": "^0.10.0",
     "redux-form": "^5.3.1",
     "redux-promise": "^0.5.3",
-    "systemjs": "^0.19.40"
+    "systemjs": "^0.19.40",
+    "systemjs-plugin-babel": "0.0.17"
   }
 }
